--- a/style.css
+++ b/style.css
@@ -13,24 +13,26 @@ text-shadow: 0 0 3px #033000;
 text-align: center;
 font-family: 'Libre Baskerville', serif;
 font-size: 50px;
-margin:  0 0 -70 0;
+margin:  0 0 -80 0;
 }
 
 .ring img{
-  margin: -50px 0 0 0;
-}
-
-.green img{
-  margin: -210 0 0 890;
-}
-
-.zoom img{
   margin: 290px 0 0 0;
 }
 
 .necklace img{
-  margin: -200 0 0 890px;
+  margin: -50px 0 0 0;
 }
+
+.green img{
+  margin: -700 0 -800 890;
+}
+
+.zoom img{
+  margin: -200 0 0 890px
+}
+
+
 
 footer {
   text-align: center;
