--- a/style2.css
+++ b/style2.css
@@ -1,9 +1,14 @@
 body{
-  margin: 40 40 50 40;
+
   background-color: black;
 }
 
-#diamond{
+#board {
+  background-color: red;
+  width:;
+}
+
+.diamond{
   background-image: url('diamond.gif');
   background-color: red;
   width:20px;
