--- a/style.css
+++ b/style.css
@@ -11,25 +11,48 @@ body{
 h1{
 text-shadow: 0 0 3px #033000;
 text-align: center;
-font-family: 'Libre Baskerville', serif;
-font-size: 50px;
+font-family: 'IM Fell English', serif;
+font-size: 80px;
 margin:  50 0 -110 0;
 }
 
 
 .necklace img{
-  margin: -50px 0 0 0;
+  margin: 240 0 0 0;
+  float:left;
 }
 
 
 .zoom img{
-  margin: -100 0 0 890px
+  margin: 240 0 0 0;
+  float: right;
+}
+
+select {
+  background-color: black;
+  color: white;
+  border-color: black;
+  font-size: 18px;
+  font-family: 'IM Fell English', serif;
+  margin: 10 0 0 0;
+}
+
+button{
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  margin: 5 0 0 0;
+  border-color: black;
+}
+button img {
+  height: 30px;
 }
 
 
-
 footer {
+  font-family: 'IM Fell English', serif;
   text-align: center;
-  margin: 0 0 0 10;
+  margin: 520 0 0 0;
+  font-size: 20px;
 
 }
