--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,15 @@
 body {
 
     background-color: black;
+    background-image: url('audrey.jpg');
+    background-size: 200px;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
 
@@ -13,16 +22,12 @@ body {
 }
 .flex-items img {
   width:25px;
-  height:25px;
+  height:px;
 }
 #flex-container{
-    border: 3px red dotted;
+    border: 3px white;
     width: 650px;
     height: 650px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 
 }
 
