--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
   background-position: center;
   background-color: black;
   color:white;
+  background-size: cover;
 }
 h1{
 text-shadow: 0 0 3px #033000;
