--- a/style2.css
+++ b/style2.css
@@ -1,8 +1,8 @@
 body {
 
     background-color: black;
-    background-image: url('audrey.jpg');
-    background-size: 200px;
+    background-image: url('necklace.gif');
+    background-size: 300px;
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
@@ -21,7 +21,7 @@ body {
   margin:100px;
 }
 .flex-items img {
-  width:28px;
+  width:50px;
   margin:0 0 0 0;
 }
 #flex-container{
